--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -131,6 +131,14 @@ li { list-style: none; }
 
 img, ion-icon, a, button, time, span { display: block; }
 
+a.inline-bold {
+  display: inline;
+  font-weight: bold;
+  color: inherit;
+  text-decoration: none;
+}
+
+
 button {
   font: inherit;
   background: none;
